@@ -15,6 +15,7 @@
  - loaded classes can be made immutable for better performance vs a bit more load time   
  - CloudFront methods had dates appended to them. Now all methods don't have the
    date appended, so anyone using CloudFront should be aware of that API change
+ - New iterators for EC2 and Glacier
 
  - S3 API update: Support for ServerSideEncryption 
  - KMS API update: New operations: CancelKeyDeletion ListRetirableGrants ScheduleKeyDeletion and docu update
